<resources>
    <string name="app_name">Chest of Drawers</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_all">All</string>
    <string name="title_about">About</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="success_refresh">Refresh Successfully</string>
    <string name="copied">Copied</string>
    <string name="input_abbreviation">Please input abbreviation</string>
    <string name="interface_error">Interface Error</string>
    <string name="no_favourite">No collection</string>
    <string name="no_favourite_tip">Please long press on the corresponding tool to collect</string>
    <string name="do_favourite">Favourite Successfully</string>
    <string name="cancel_favourite">Cancelled Successfully</string>
    <string name="rights">© 2021 UtopiaXC All Rights Reserved</string>

    <string name="version">Version</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_title">Changelog(Please wait for loading)</string>
    <string name="licenses">Licenses</string>
    <string name="author">Author</string>
    <string name="author_name">UtopiaXC</string>
    <string name="fork_on_github">Fork on Github</string>
    <string name="send_an_email">Send an email</string>
    <string name="input_video_number">Please input AV/BV number</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="sorry">Sorry</string>
    <string name="bilibili_code_format_error">Your video number format is wrong,please ensure your number is start with "AV" or "BV".</string>
    <string name="bilibili_http_error">Request failed, please check if your video number is right,or maybe api is dead.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="theme">Theme</string>
    <string name="day_theme">Day Theme</string>
    <string name="night_theme">Night Theme</string>
    <string name="auto_theme">Auto Theme</string>
    <string name="application_first_fragment">Enable favourite page as main page</string>
    <string name="no_result">No result</string>
    <string name="text_before_encryption">Text before encryption</string>
    <string name="text_after_encryption">Text After encryption</string>
    <string name="no_text_input">Please input text</string>
    <string name="use_my_ip">Use my IP</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="city_code">City Code</string>
    <string name="area">Area</string>
    <string name="isp">ISP</string>
    <string name="ip">IP</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="ip_format_error">Your IP format is wrong</string>

    <!--功能入口-->
    <string name="function_weibo_title">Hot search on Weibo</string>
    <string name="function_weibo_second_title">Show the 50 most popular Weibo</string>

    <string name="function_nbnhhsh_title">Abbreviation translation</string>
    <string name="function_nbnhhsh_second_title">Convert network abbreviations to normal text</string>

    <string name="function_bilibili_pic_title">Bilibili Video Cover</string>
    <string name="function_bilibili_pic_second_title">Get the specified Bilibili video cover</string>

    <string name="function_md5_title">MD5 Encryption</string>
    <string name="function_md5_second_title">Encrypt your string with MD5 algorithm</string>

    <string name="function_base64_title">Base64 encryption/decryption</string>
    <string name="function_base64_second_title">Encrypt and decrypt your string with Base64 algorithm</string>

    <string name="function_ip_title">IP Query</string>
    <string name="function_ip_second_title">Query your or others\' ip information</string>


    <!--设置参数-->
    <string name="day_theme_value" translatable="false">day_theme</string>
    <string name="night_theme_value" translatable="false">night_theme</string>
    <string name="auto_theme_value" translatable="false">auto_theme</string>

</resources>