<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all">

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.utopiaxc.chest.fragments.FragmentFavourite"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_navigation_favourite_to_activityWeibo"
            app:destination="@id/activityWeibo" />
        <action
            android:id="@+id/action_navigation_favourite_to_activityNbnhhsh"
            app:destination="@id/activityNbnhhsh" />
        <action
            android:id="@+id/action_navigation_favourite_to_activityBilibiliPic"
            app:destination="@id/activityBilibiliPic" />
        <action
            android:id="@+id/action_navigation_favourite_to_activityMD5"
            app:destination="@id/activityMD5" />
        <action
            android:id="@+id/action_navigation_favourite_to_activityBase64"
            app:destination="@id/activityBase64" />
        <action
            android:id="@+id/action_navigation_favourite_to_activityIp"
            app:destination="@id/activityIp" />
    </fragment>

    <fragment
        android:id="@+id/navigation_all"
        android:name="com.utopiaxc.chest.fragments.FragmentAll"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_all" >
        <action
            android:id="@+id/action_navigation_all_to_activityWeibo"
            app:destination="@id/activityWeibo" />
        <action
            android:id="@+id/action_navigation_all_to_activityNbnhhsh"
            app:destination="@id/activityNbnhhsh" />
        <action
            android:id="@+id/action_navigation_all_to_activityBilibiliPic"
            app:destination="@id/activityBilibiliPic" />
        <action
            android:id="@+id/action_navigation_all_to_activityMD5"
            app:destination="@id/activityMD5" />
        <action
            android:id="@+id/action_navigation_all_to_activityBase64"
            app:destination="@id/activityBase64" />
        <action
            android:id="@+id/action_navigation_all_to_activityIp"
            app:destination="@id/activityIp" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.utopiaxc.chest.fragments.FragmentAbout"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_navigation_about_to_settingsActivity"
            app:destination="@id/settingsActivity" />
    </fragment>

    <activity
        android:id="@+id/activityWeibo"
        android:name="com.utopiaxc.chest.activities.ActivityWeibo"
        android:label="@string/function_weibo_title"
        tools:layout="@layout/activity_weibo" >
    </activity>

    <activity
        android:id="@+id/activityNbnhhsh"
        android:name="com.utopiaxc.chest.activities.ActivityNbnhhsh"
        android:label="@string/function_nbnhhsh_title"
        tools:layout="@layout/activity_nbnhhsh" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.utopiaxc.chest.activities.SettingsActivity"
        android:label="SettingsActivity" />
    <activity
        android:id="@+id/activityBilibiliPic"
        android:name="com.utopiaxc.chest.activities.ActivityBilibiliPic"
        android:label="activity_bilibili_pic"
        tools:layout="@layout/activity_bilibili_pic" />
    <activity
        android:id="@+id/activityMD5"
        android:name="com.utopiaxc.chest.activities.ActivityMD5"
        android:label="activity_md5"
        tools:layout="@layout/activity_md5" />
    <activity
        android:id="@+id/activityBase64"
        android:name="com.utopiaxc.chest.activities.ActivityBase64"
        android:label="activity_base64"
        tools:layout="@layout/activity_base64" />
    <activity
        android:id="@+id/activityIp"
        android:name="com.utopiaxc.chest.activities.ActivityIp"
        android:label="activity_ip"
        tools:layout="@layout/activity_ip" />
</navigation>